<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:orientation="vertical">

        <com.core.app.ui.custom.ItemPopup
            android:id="@+id/lang_eng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:withImage="@drawable/ac_countrys_flags"
            app:withText="@string/lang_eng" />

        <com.core.app.ui.custom.ItemPopup
            android:id="@+id/lang_ger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:withImage="@drawable/germany"
            app:withText="@string/lang_ger" />

        <com.core.app.ui.custom.ItemPopup
            android:id="@+id/lang_spa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:withImage="@drawable/spain"
            app:withText="@string/lang_spa" />

        <com.core.app.ui.custom.ItemPopup
            android:id="@+id/lang_fra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:withImage="@drawable/france"
            app:withText="@string/lang_fra" />

        <com.core.app.ui.custom.ItemPopup
            android:id="@+id/lang_rus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:withImage="@drawable/russia"
            app:withText="@string/lang_rus" />

        <com.core.app.ui.custom.ItemPopup
            android:id="@+id/lang_tur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:withImage="@drawable/turkey"
            app:withText="@string/lang_tur" />

        <com.core.app.ui.custom.ItemPopup
            android:id="@+id/lang_sau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:withImage="@drawable/saudi_arabia"
            app:withText="@string/lang_sau" />

        <com.core.app.ui.custom.ItemPopup
            android:id="@+id/lang_bra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:withImage="@drawable/brazil"
            app:withText="@string/lang_bra" />

        <com.core.app.ui.custom.ItemPopup
            android:id="@+id/lang_ind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:withImage="@drawable/india"
            app:withText="@string/lang_ind" />

        <com.core.app.ui.custom.ItemPopup
            android:id="@+id/lang_jap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:withImage="@drawable/japan"
            app:withText="@string/lang_jap" />

        <com.core.app.ui.custom.ItemPopup
            android:id="@+id/lang_sou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:withImage="@drawable/south_korea"
            app:withText="@string/lang_sou" />

        <com.core.app.ui.custom.ItemPopup
            android:id="@+id/lang_chi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:withImage="@drawable/china"
            app:withText="@string/lang_chi" />
    </LinearLayout>
</ScrollView>