<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rate"
            android:checked="false"
            android:icon="@drawable/nav_star"
            android:title="@string/nav_rate_me"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/nav_store"
            android:checked="false"
            android:icon="@drawable/ic_store"
            android:title="@string/nav_store"
            app:showAsAction="ifRoom"
            />
        <item
            android:id="@+id/nav_feedback"
            android:checked="false"
            android:icon="@drawable/nav_feedback"
            android:title="@string/nav_feedback"
            app:showAsAction="ifRoom"
            android:visible="false"
            />

        <item
            android:id="@+id/nav_share"
            android:checked="false"
            android:icon="@drawable/nav_share"
            android:title="@string/nav_share"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nav_about_us"
            android:checked="false"
            android:icon="@drawable/nav_help"
            android:title="@string/nav_about_us"
            app:showAsAction="ifRoom"
            android:visible="false"
            />
    </group>

</menu>