<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <ImageView
            style="@style/ImageViewStyle"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_standard"
            android:layout_marginTop="32dp"
            android:src="@drawable/exit_icon"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/do_you_want_to_exit_the_task"
            android:textColor="#263238"
            android:textSize="16sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/margin_short"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/cmd_no"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/cmd_no"
                android:textColor="#8a000000"
                android:textSize="14sp" />

            <Button
                android:id="@+id/cmd_yes"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/cmd_yes"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
