<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar_subtopic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xlarge"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_xlarge"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp">

                    <LinearLayout
                        android:id="@+id/layout_remove_ads"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_item_topic"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:layout_margin="@dimen/margin_standard"
                            android:src="@drawable/icc_thumbs_up"
                            app:tint="@color/white" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_standard"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-medium"
                                android:text="@string/remove_ads"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:text="Enjoy English Vocabulary without any disturbing ads"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="normal" />
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/buy_remove_ads"
                        android:layout_width="186dp"
                        android:layout_height="32dp"
                        android:layout_gravity="bottom|end"
                        android:layout_marginEnd="@dimen/margin_standard"
                        android:background="@drawable/bg_rect_solid_green"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="$ 0.99"
                        android:textColor="@color/white" />
                </FrameLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp">

                    <LinearLayout
                        android:id="@+id/layout_test_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_item_topic"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:layout_margin="@dimen/margin_standard"
                            android:src="@drawable/bot_test_2"
                            android:tint="@color/white" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_standard"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-medium"
                                android:text="@string/learn_test_2"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:text="@string/purchase_test_2_pack"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="normal" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_standard"
                                android:fontFamily="sans-serif"
                                android:text="@string/purchase_content_2"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="normal"
                                android:visibility="gone" />
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/buy_learn_verbs"
                        android:layout_width="186dp"
                        android:layout_height="32dp"
                        android:layout_gravity="bottom|end"
                        android:layout_marginEnd="@dimen/margin_standard"
                        android:background="@drawable/bg_rect_solid_green"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="$ 0.99"
                        android:textColor="@color/white" />
                </FrameLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp">

                    <LinearLayout
                        android:id="@+id/layout_listen_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_item_topic"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="62dp"
                            android:layout_height="62dp"
                            android:layout_margin="@dimen/margin_standard"
                            android:src="@drawable/bot_listening_2"
                            android:tint="@color/white" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_standard"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-medium"
                                android:text="@string/learn_listing_2"
                                android:textColor="@color/white"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif"
                                android:text="Purchase listening 2 pack."
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="normal" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_standard"
                                android:fontFamily="sans-serif"
                                android:text="@string/purchase_content_3"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:textStyle="normal"
                                android:visibility="gone" />
                        </LinearLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/buy_more_verbs"
                        android:layout_width="186dp"
                        android:layout_height="32dp"
                        android:layout_gravity="bottom|end"
                        android:layout_marginEnd="@dimen/margin_standard"
                        android:background="@drawable/bg_rect_solid_green"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="$ 0.99"
                        android:textColor="@color/white" />
                </FrameLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>